sumo/tests/duarouter/routes/style2_input/errors/vehicle_empty_departlane/errors.duarouter
Error: Attribute 'departlane' in definition of a vehicle is empty.
Error: Invalid departlane definition for vehicle '0'
Quitting (on error).
